<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.esaulov.foodchoose.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_go"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="54dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wopper"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="113dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fries"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="160dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pepsi"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="207dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/souce"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="252dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desert"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="298dp"
        tools:ignore="MissingConstraints" />

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="42dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
